Artifacts/CF_Template.yaml
---
Resources:
  DbActivityStreamsVPCC45C0B6D:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
      - Key: Name
        Value: DbActivityStreamsStack/DbActivityStreamsVPC
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DbActivityStreamsVPC/Resource
  DbActivityStreamsVPCPublicSubnet1Subnet7F570CDD:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-west-2a
      CidrBlock: 10.0.0.0/19
      MapPublicIpOnLaunch: true
      Tags:
      - Key: aws-cdk:subnet-name
        Value: Public
      - Key: aws-cdk:subnet-type
        Value: Public
      - Key: Name
        Value: DbActivityStreamsStack/DbActivityStreamsVPC/PublicSubnet1
      VpcId:
        Ref: DbActivityStreamsVPCC45C0B6D
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DbActivityStreamsVPC/PublicSubnet1/Subnet
  DbActivityStreamsVPCPublicSubnet1RouteTableC0311B26:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
      - Key: Name
        Value: DbActivityStreamsStack/DbActivityStreamsVPC/PublicSubnet1
      VpcId:
        Ref: DbActivityStreamsVPCC45C0B6D
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DbActivityStreamsVPC/PublicSubnet1/RouteTable
  DbActivityStreamsVPCPublicSubnet1RouteTableAssociationA04F999E:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: DbActivityStreamsVPCPublicSubnet1RouteTableC0311B26
      SubnetId:
        Ref: DbActivityStreamsVPCPublicSubnet1Subnet7F570CDD
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DbActivityStreamsVPC/PublicSubnet1/RouteTableAssociation
  DbActivityStreamsVPCPublicSubnet1DefaultRoute32A5652A:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: DbActivityStreamsVPCIGW561D32DF
      RouteTableId:
        Ref: DbActivityStreamsVPCPublicSubnet1RouteTableC0311B26
    DependsOn:
    - DbActivityStreamsVPCVPCGW2ECDE60B
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DbActivityStreamsVPC/PublicSubnet1/DefaultRoute
  DbActivityStreamsVPCPublicSubnet1EIP5AC21A19:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
      - Key: Name
        Value: DbActivityStreamsStack/DbActivityStreamsVPC/PublicSubnet1
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DbActivityStreamsVPC/PublicSubnet1/EIP
  DbActivityStreamsVPCPublicSubnet1NATGateway6D5E7C2B:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
        - DbActivityStreamsVPCPublicSubnet1EIP5AC21A19
        - AllocationId
      SubnetId:
        Ref: DbActivityStreamsVPCPublicSubnet1Subnet7F570CDD
      Tags:
      - Key: Name
        Value: DbActivityStreamsStack/DbActivityStreamsVPC/PublicSubnet1
    DependsOn:
    - DbActivityStreamsVPCPublicSubnet1DefaultRoute32A5652A
    - DbActivityStreamsVPCPublicSubnet1RouteTableAssociationA04F999E
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DbActivityStreamsVPC/PublicSubnet1/NATGateway
  DbActivityStreamsVPCPublicSubnet2Subnet4333A889:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-west-2b
      CidrBlock: 10.0.32.0/19
      MapPublicIpOnLaunch: true
      Tags:
      - Key: aws-cdk:subnet-name
        Value: Public
      - Key: aws-cdk:subnet-type
        Value: Public
      - Key: Name
        Value: DbActivityStreamsStack/DbActivityStreamsVPC/PublicSubnet2
      VpcId:
        Ref: DbActivityStreamsVPCC45C0B6D
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DbActivityStreamsVPC/PublicSubnet2/Subnet
  DbActivityStreamsVPCPublicSubnet2RouteTableB1F32B04:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
      - Key: Name
        Value: DbActivityStreamsStack/DbActivityStreamsVPC/PublicSubnet2
      VpcId:
        Ref: DbActivityStreamsVPCC45C0B6D
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DbActivityStreamsVPC/PublicSubnet2/RouteTable
  DbActivityStreamsVPCPublicSubnet2RouteTableAssociationE8B06687:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: DbActivityStreamsVPCPublicSubnet2RouteTableB1F32B04
      SubnetId:
        Ref: DbActivityStreamsVPCPublicSubnet2Subnet4333A889
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DbActivityStreamsVPC/PublicSubnet2/RouteTableAssociation
  DbActivityStreamsVPCPublicSubnet2DefaultRoute0287B79B:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: DbActivityStreamsVPCIGW561D32DF
      RouteTableId:
        Ref: DbActivityStreamsVPCPublicSubnet2RouteTableB1F32B04
    DependsOn:
    - DbActivityStreamsVPCVPCGW2ECDE60B
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DbActivityStreamsVPC/PublicSubnet2/DefaultRoute
  DbActivityStreamsVPCPublicSubnet3Subnet8B6E9362:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-west-2c
      CidrBlock: 10.0.64.0/19
      MapPublicIpOnLaunch: true
      Tags:
      - Key: aws-cdk:subnet-name
        Value: Public
      - Key: aws-cdk:subnet-type
        Value: Public
      - Key: Name
        Value: DbActivityStreamsStack/DbActivityStreamsVPC/PublicSubnet3
      VpcId:
        Ref: DbActivityStreamsVPCC45C0B6D
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DbActivityStreamsVPC/PublicSubnet3/Subnet
  DbActivityStreamsVPCPublicSubnet3RouteTable53162A58:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
      - Key: Name
        Value: DbActivityStreamsStack/DbActivityStreamsVPC/PublicSubnet3
      VpcId:
        Ref: DbActivityStreamsVPCC45C0B6D
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DbActivityStreamsVPC/PublicSubnet3/RouteTable
  DbActivityStreamsVPCPublicSubnet3RouteTableAssociation0EB2757C:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: DbActivityStreamsVPCPublicSubnet3RouteTable53162A58
      SubnetId:
        Ref: DbActivityStreamsVPCPublicSubnet3Subnet8B6E9362
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DbActivityStreamsVPC/PublicSubnet3/RouteTableAssociation
  DbActivityStreamsVPCPublicSubnet3DefaultRoute50FC53EE:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: DbActivityStreamsVPCIGW561D32DF
      RouteTableId:
        Ref: DbActivityStreamsVPCPublicSubnet3RouteTable53162A58
    DependsOn:
    - DbActivityStreamsVPCVPCGW2ECDE60B
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DbActivityStreamsVPC/PublicSubnet3/DefaultRoute
  DbActivityStreamsVPCPrivateSubnet1Subnet685C9E68:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-west-2a
      CidrBlock: 10.0.96.0/19
      MapPublicIpOnLaunch: false
      Tags:
      - Key: aws-cdk:subnet-name
        Value: Private
      - Key: aws-cdk:subnet-type
        Value: Private
      - Key: Name
        Value: DbActivityStreamsStack/DbActivityStreamsVPC/PrivateSubnet1
      VpcId:
        Ref: DbActivityStreamsVPCC45C0B6D
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DbActivityStreamsVPC/PrivateSubnet1/Subnet
  DbActivityStreamsVPCPrivateSubnet1RouteTable01144CE8:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
      - Key: Name
        Value: DbActivityStreamsStack/DbActivityStreamsVPC/PrivateSubnet1
      VpcId:
        Ref: DbActivityStreamsVPCC45C0B6D
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DbActivityStreamsVPC/PrivateSubnet1/RouteTable
  DbActivityStreamsVPCPrivateSubnet1RouteTableAssociation50727643:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: DbActivityStreamsVPCPrivateSubnet1RouteTable01144CE8
      SubnetId:
        Ref: DbActivityStreamsVPCPrivateSubnet1Subnet685C9E68
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DbActivityStreamsVPC/PrivateSubnet1/RouteTableAssociation
  DbActivityStreamsVPCPrivateSubnet1DefaultRouteB2F15E3E:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: DbActivityStreamsVPCPublicSubnet1NATGateway6D5E7C2B
      RouteTableId:
        Ref: DbActivityStreamsVPCPrivateSubnet1RouteTable01144CE8
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DbActivityStreamsVPC/PrivateSubnet1/DefaultRoute
  DbActivityStreamsVPCPrivateSubnet2Subnet237BCC7C:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-west-2b
      CidrBlock: 10.0.128.0/19
      MapPublicIpOnLaunch: false
      Tags:
      - Key: aws-cdk:subnet-name
        Value: Private
      - Key: aws-cdk:subnet-type
        Value: Private
      - Key: Name
        Value: DbActivityStreamsStack/DbActivityStreamsVPC/PrivateSubnet2
      VpcId:
        Ref: DbActivityStreamsVPCC45C0B6D
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DbActivityStreamsVPC/PrivateSubnet2/Subnet
  DbActivityStreamsVPCPrivateSubnet2RouteTableA46EA792:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
      - Key: Name
        Value: DbActivityStreamsStack/DbActivityStreamsVPC/PrivateSubnet2
      VpcId:
        Ref: DbActivityStreamsVPCC45C0B6D
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DbActivityStreamsVPC/PrivateSubnet2/RouteTable
  DbActivityStreamsVPCPrivateSubnet2RouteTableAssociation058AF7F5:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: DbActivityStreamsVPCPrivateSubnet2RouteTableA46EA792
      SubnetId:
        Ref: DbActivityStreamsVPCPrivateSubnet2Subnet237BCC7C
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DbActivityStreamsVPC/PrivateSubnet2/RouteTableAssociation
  DbActivityStreamsVPCPrivateSubnet2DefaultRoute9D0F6C5C:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: DbActivityStreamsVPCPublicSubnet1NATGateway6D5E7C2B
      RouteTableId:
        Ref: DbActivityStreamsVPCPrivateSubnet2RouteTableA46EA792
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DbActivityStreamsVPC/PrivateSubnet2/DefaultRoute
  DbActivityStreamsVPCPrivateSubnet3Subnet0857EE2E:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-west-2c
      CidrBlock: 10.0.160.0/19
      MapPublicIpOnLaunch: false
      Tags:
      - Key: aws-cdk:subnet-name
        Value: Private
      - Key: aws-cdk:subnet-type
        Value: Private
      - Key: Name
        Value: DbActivityStreamsStack/DbActivityStreamsVPC/PrivateSubnet3
      VpcId:
        Ref: DbActivityStreamsVPCC45C0B6D
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DbActivityStreamsVPC/PrivateSubnet3/Subnet
  DbActivityStreamsVPCPrivateSubnet3RouteTableD4CCD73D:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
      - Key: Name
        Value: DbActivityStreamsStack/DbActivityStreamsVPC/PrivateSubnet3
      VpcId:
        Ref: DbActivityStreamsVPCC45C0B6D
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DbActivityStreamsVPC/PrivateSubnet3/RouteTable
  DbActivityStreamsVPCPrivateSubnet3RouteTableAssociation80D42198:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: DbActivityStreamsVPCPrivateSubnet3RouteTableD4CCD73D
      SubnetId:
        Ref: DbActivityStreamsVPCPrivateSubnet3Subnet0857EE2E
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DbActivityStreamsVPC/PrivateSubnet3/RouteTableAssociation
  DbActivityStreamsVPCPrivateSubnet3DefaultRouteA9A47C0D:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: DbActivityStreamsVPCPublicSubnet1NATGateway6D5E7C2B
      RouteTableId:
        Ref: DbActivityStreamsVPCPrivateSubnet3RouteTableD4CCD73D
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DbActivityStreamsVPC/PrivateSubnet3/DefaultRoute
  DbActivityStreamsVPCIGW561D32DF:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: DbActivityStreamsStack/DbActivityStreamsVPC
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DbActivityStreamsVPC/IGW
  DbActivityStreamsVPCVPCGW2ECDE60B:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId:
        Ref: DbActivityStreamsVPCIGW561D32DF
      VpcId:
        Ref: DbActivityStreamsVPCC45C0B6D
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DbActivityStreamsVPC/VPCGW
  DbActivityStreamsVPCRestrictDefaultSecurityGroupCustomResource272BB1AF:
    Type: Custom::VpcRestrictDefaultSG
    Properties:
      ServiceToken:
        Fn::GetAtt:
        - CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E
        - Arn
      DefaultSecurityGroupId:
        Fn::GetAtt:
        - DbActivityStreamsVPCC45C0B6D
        - DefaultSecurityGroup
      Account: '944963212507'
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DbActivityStreamsVPC/RestrictDefaultSecurityGroupCustomResource/Default
  CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Action: sts:AssumeRole
          Effect: Allow
          Principal:
            Service: lambda.amazonaws.com
      ManagedPolicyArns:
      - Fn::Sub: arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
      Policies:
      - PolicyName: Inline
        PolicyDocument:
          Version: '2012-10-17'
          Statement:
          - Effect: Allow
            Action:
            - ec2:AuthorizeSecurityGroupIngress
            - ec2:AuthorizeSecurityGroupEgress
            - ec2:RevokeSecurityGroupIngress
            - ec2:RevokeSecurityGroupEgress
            Resource:
            - Fn::Join:
              - ''
              - - arn:aws:ec2:us-west-2:944963212507:security-group/
                - Fn::GetAtt:
                  - DbActivityStreamsVPCC45C0B6D
                  - DefaultSecurityGroup
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role
  CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        S3Bucket: cdk-hnb659fds-assets-944963212507-us-west-2
        S3Key: 7f18a11296f35510ee16538afec983ed6312e12afbf81b777089a9f8e34e2474.zip
      Timeout: 900
      MemorySize: 128
      Handler: __entrypoint__.handler
      Role:
        Fn::GetAtt:
        - CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0
        - Arn
      Runtime: nodejs18.x
      Description: Lambda function for removing all inbound/outbound rules from the
        VPC default security group
    DependsOn:
    - CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler
      aws:asset:path: asset.7f18a11296f35510ee16538afec983ed6312e12afbf81b777089a9f8e34e2474
      aws:asset:property: Code
  DatabaseSubnets56F17B9A:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnets for Database database
      SubnetIds:
      - Ref: DbActivityStreamsVPCPrivateSubnet1Subnet685C9E68
      - Ref: DbActivityStreamsVPCPrivateSubnet2Subnet237BCC7C
      - Ref: DbActivityStreamsVPCPrivateSubnet3Subnet0857EE2E
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/Database/Subnets/Default
  DatabaseSecurityGroup5C91FDCB:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: RDS security group
      SecurityGroupEgress:
      - CidrIp: 0.0.0.0/0
        Description: Allow all outbound traffic by default
        IpProtocol: "-1"
      VpcId:
        Ref: DbActivityStreamsVPCC45C0B6D
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/Database/SecurityGroup/Resource
  DatabaseSecurityGroupfromDbActivityStreamsStackBastionHostInstanceSecurityGroupC951DB29IndirectPort39AEADF7:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: from DbActivityStreamsStackBastionHostInstanceSecurityGroupC951DB29:{IndirectPort}
      FromPort:
        Fn::GetAtt:
        - DatabaseB269D8BB
        - Endpoint.Port
      GroupId:
        Fn::GetAtt:
        - DatabaseSecurityGroup5C91FDCB
        - GroupId
      IpProtocol: tcp
      SourceSecurityGroupId:
        Fn::GetAtt:
        - BastionHostInstanceSecurityGroupE75D4274
        - GroupId
      ToPort:
        Fn::GetAtt:
        - DatabaseB269D8BB
        - Endpoint.Port
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/Database/SecurityGroup/from DbActivityStreamsStackBastionHostInstanceSecurityGroupC951DB29:{IndirectPort}
  DbActivityStreamsStackDatabaseSecret5921331A3fdaad7efa858a3daf9490cf0a702aeb:
    Type: AWS::SecretsManager::Secret
    Properties:
      Description:
        Fn::Join:
        - ''
        - - 'Generated by the CDK for stack: '
          - Ref: AWS::StackName
      GenerateSecretString:
        ExcludeCharacters: ' %+~`#$&*()|[]{}:;<>?!''/@"\'
        GenerateStringKey: password
        PasswordLength: 30
        SecretStringTemplate: '{"username":"adminuser"}'
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/Database/Secret/Resource
  DatabaseSecretAttachmentE5D1B020:
    Type: AWS::SecretsManager::SecretTargetAttachment
    Properties:
      SecretId:
        Ref: DbActivityStreamsStackDatabaseSecret5921331A3fdaad7efa858a3daf9490cf0a702aeb
      TargetId:
        Ref: DatabaseB269D8BB
      TargetType: AWS::RDS::DBCluster
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/Database/Secret/Attachment/Resource
  DatabaseB269D8BB:
    Type: AWS::RDS::DBCluster
    Properties:
      CopyTagsToSnapshot: true
      DBClusterParameterGroupName: default.aurora-postgresql15
      DBSubnetGroupName:
        Ref: DatabaseSubnets56F17B9A
      Engine: aurora-postgresql
      EngineVersion: '15.2'
      MasterUserPassword:
        Fn::Join:
        - ''
        - - "{{resolve:secretsmanager:"
          - Ref: DbActivityStreamsStackDatabaseSecret5921331A3fdaad7efa858a3daf9490cf0a702aeb
          - ":SecretString:password::}}"
      MasterUsername: adminuser
      Port: 5432
      StorageType: aurora-iopt1
      VpcSecurityGroupIds:
      - Fn::GetAtt:
        - DatabaseSecurityGroup5C91FDCB
        - GroupId
    UpdateReplacePolicy: Snapshot
    DeletionPolicy: Snapshot
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/Database/Resource
  DatabaseInstance1844F58FD:
    Type: AWS::RDS::DBInstance
    Properties:
      DBClusterIdentifier:
        Ref: DatabaseB269D8BB
      DBInstanceClass: db.r5.large
      DBSubnetGroupName:
        Ref: DatabaseSubnets56F17B9A
      Engine: aurora-postgresql
      PubliclyAccessible: false
    DependsOn:
    - DbActivityStreamsVPCPrivateSubnet1DefaultRouteB2F15E3E
    - DbActivityStreamsVPCPrivateSubnet1RouteTableAssociation50727643
    - DbActivityStreamsVPCPrivateSubnet2DefaultRoute9D0F6C5C
    - DbActivityStreamsVPCPrivateSubnet2RouteTableAssociation058AF7F5
    - DbActivityStreamsVPCPrivateSubnet3DefaultRouteA9A47C0D
    - DbActivityStreamsVPCPrivateSubnet3RouteTableAssociation80D42198
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/Database/Instance1
  DatabaseInstance2AA380DEE:
    Type: AWS::RDS::DBInstance
    Properties:
      DBClusterIdentifier:
        Ref: DatabaseB269D8BB
      DBInstanceClass: db.r5.large
      DBSubnetGroupName:
        Ref: DatabaseSubnets56F17B9A
      Engine: aurora-postgresql
      PubliclyAccessible: false
    DependsOn:
    - DbActivityStreamsVPCPrivateSubnet1DefaultRouteB2F15E3E
    - DbActivityStreamsVPCPrivateSubnet1RouteTableAssociation50727643
    - DbActivityStreamsVPCPrivateSubnet2DefaultRoute9D0F6C5C
    - DbActivityStreamsVPCPrivateSubnet2RouteTableAssociation058AF7F5
    - DbActivityStreamsVPCPrivateSubnet3DefaultRouteA9A47C0D
    - DbActivityStreamsVPCPrivateSubnet3RouteTableAssociation80D42198
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/Database/Instance2
  BastionHostInstanceSecurityGroupE75D4274:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: DbActivityStreamsStack/BastionHost/Resource/InstanceSecurityGroup
      SecurityGroupEgress:
      - CidrIp: 0.0.0.0/0
        Description: Allow all outbound traffic by default
        IpProtocol: "-1"
      Tags:
      - Key: Name
        Value: BastionHost
      VpcId:
        Ref: DbActivityStreamsVPCC45C0B6D
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/BastionHost/Resource/InstanceSecurityGroup/Resource
  BastionHostInstanceRoleDD3FA5F1:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Action: sts:AssumeRole
          Effect: Allow
          Principal:
            Service: ec2.amazonaws.com
        Version: '2012-10-17'
      Tags:
      - Key: Name
        Value: BastionHost
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/BastionHost/Resource/InstanceRole/Resource
  BastionHostInstanceRoleDefaultPolicy17347525:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
        - Action:
          - ec2messages:*
          - ssm:UpdateInstanceInformation
          - ssmmessages:*
          Effect: Allow
          Resource: "*"
        Version: '2012-10-17'
      PolicyName: BastionHostInstanceRoleDefaultPolicy17347525
      Roles:
      - Ref: BastionHostInstanceRoleDD3FA5F1
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/BastionHost/Resource/InstanceRole/DefaultPolicy/Resource
  BastionHostInstanceProfile770FCA07:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
      - Ref: BastionHostInstanceRoleDD3FA5F1
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/BastionHost/Resource/InstanceProfile
  BastionHost30F9ED05:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: us-west-2a
      BlockDeviceMappings:
      - DeviceName: "/dev/sdh"
        Ebs:
          Encrypted: true
          VolumeSize: 10
      IamInstanceProfile:
        Ref: BastionHostInstanceProfile770FCA07
      ImageId:
        Ref: SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amikernel510hvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t3.medium
      SecurityGroupIds:
      - Fn::GetAtt:
        - BastionHostInstanceSecurityGroupE75D4274
        - GroupId
      SubnetId:
        Ref: DbActivityStreamsVPCPublicSubnet1Subnet7F570CDD
      Tags:
      - Key: Name
        Value: BastionHost
      UserData:
        Fn::Base64: "#!/bin/bash"
    DependsOn:
    - BastionHostInstanceRoleDefaultPolicy17347525
    - BastionHostInstanceRoleDD3FA5F1
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/BastionHost/Resource/Resource
  #ServiceLinkedRoleforOS:
    #Type: AWS::IAM::ServiceLinkedRole
    #Properties:
      #AWSServiceName: es.amazonaws.com
    #Metadata:
      #aws:cdk:path: DbActivityStreamsStack/Service Linked Role for OS
  DBActivityOSDomainSecurityGroup604F03FB:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for domain DBActivityOSDomain
      SecurityGroupEgress:
      - CidrIp: 0.0.0.0/0
        Description: Allow all outbound traffic by default
        IpProtocol: "-1"
      VpcId:
        Ref: DbActivityStreamsVPCC45C0B6D
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DBActivityOSDomain/SecurityGroup/Resource
  DBActivityOSDomainSecurityGroupfromDbActivityStreamsStackBastionHostInstanceSecurityGroupC951DB2944371488C5C:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: from DbActivityStreamsStackBastionHostInstanceSecurityGroupC951DB29:443
      FromPort: 443
      GroupId:
        Fn::GetAtt:
        - DBActivityOSDomainSecurityGroup604F03FB
        - GroupId
      IpProtocol: tcp
      SourceSecurityGroupId:
        Fn::GetAtt:
        - BastionHostInstanceSecurityGroupE75D4274
        - GroupId
      ToPort: 443
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DBActivityOSDomain/SecurityGroup/from DbActivityStreamsStackBastionHostInstanceSecurityGroupC951DB29:443
  DBActivityOSDomain4F3249FD:
    Type: AWS::OpenSearchService::Domain
    Properties:
      ClusterConfig:
        DedicatedMasterEnabled: false
        InstanceCount: 3
        InstanceType: r5.large.search
        MultiAZWithStandbyEnabled: false
        ZoneAwarenessConfig:
          AvailabilityZoneCount: 3
        ZoneAwarenessEnabled: true
      DomainEndpointOptions:
        EnforceHTTPS: true
        TLSSecurityPolicy: Policy-Min-TLS-1-0-2019-07
      EBSOptions:
        EBSEnabled: true
        VolumeSize: 50
        VolumeType: gp3
      EncryptionAtRestOptions:
        Enabled: true
      EngineVersion: OpenSearch_2.7
      LogPublishingOptions: {}
      NodeToNodeEncryptionOptions:
        Enabled: true
      VPCOptions:
        SecurityGroupIds:
        - Fn::GetAtt:
          - DBActivityOSDomainSecurityGroup604F03FB
          - GroupId
        SubnetIds:
        - Ref: DbActivityStreamsVPCPrivateSubnet1Subnet685C9E68
        - Ref: DbActivityStreamsVPCPrivateSubnet2Subnet237BCC7C
        - Ref: DbActivityStreamsVPCPrivateSubnet3Subnet0857EE2E
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/DBActivityOSDomain/Resource

  ## S3 bucket
  SourceBucket:
    Type: 'AWS::S3::Bucket'
    DependsOn:
      - QueuePolicy
    Properties:
      BucketName: !Join ['', [!Ref "AWS::AccountId", "-", !Ref SourceBucketName]]
      NotificationConfiguration:
        QueueConfigurations:
          - Event: 's3:ObjectCreated:*'
            Queue: !GetAtt StandardQueue.Arn
            Filter:
              S3Key:
                Rules:
                  - Name: prefix
                    Value: !Join ['', [!Ref SourceBucketPrefix, "/"]]
                    
  QueuePolicy:
    Type: 'AWS::SQS::QueuePolicy'
    Properties:
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal: 
              Service: "s3.amazonaws.com"
            Action:
              - 'SQS:SendMessage'
            Resource: !GetAtt StandardQueue.Arn
            Condition:
              ArnLike:
                aws:SourceArn: !Join ["",['arn:aws:s3:::',!Ref "AWS::AccountId", "-", !Ref SourceBucketName]]
              StringEquals:
                aws:SourceAccount: !Ref AWS::AccountId
      Queues:
        - !Ref StandardQueue

  StandardQueue:
    Type: 'AWS::SQS::Queue'
    Properties:
      QueueName: !Ref SQSQueueName
  
  SNSTopicForOpenSearchNotification:
    Type: 'AWS::SNS::Topic'
    Properties:
      TopicName: !Ref SNSTopicName
      
  OpenSearchSNSPulishRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - es.amazonaws.com
            Action:
              - sts:AssumeRole
      Policies:
        - PolicyName: SNSSendMessagePolicy
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - sns:Publish
                Resource: !Ref SNSTopicForOpenSearchNotification

  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAA/31S227CMAz9Ft5DJpg0jUcuE0OatgoQr5ObmpLRJih2YKjqvy9tgKJp2pNPjm/HdoZyNJKDHpyor7J9v9CprFYMai8C9VmhGspqc1BiujWbZCoSnxZarXxqkBuuQ0vrGdeQFtjxHTcmskoDa2tuwQ14WSSNeQeeA+MJziJx+hhgV3hhGF3A14Co5PIac9C6K9GwWKHyTvN57qw/tBr+JRYmd0gkJkCNqldL/KaN/xYLQwxGYewdcS1cRrKaAUMKhNPCUxAloshb/dnknrgGh64uTjKbXBPbR1ec2hAqwUCOTlZRa5MVzRpcjnw36y3gt6cWGkpZLW08Q2sTG07W7q1D196Js1t9ORm6o1YYlrDHrEmshT2gIQSndhSdYQW2BN3eMKK6Fksk612zsDCcLbtn6P+3K3Q96izsIXwL5PDdcm3yJv7D88G34yXgoMSwq1okZ95Z8/ [...]
    Metadata:
      aws:cdk:path: DbActivityStreamsStack/CDKMetadata/Default
Outputs:
  BastionHostBastionHostIdC743CBD6:
    Description: Instance ID of the bastion host. Use this to connect via SSM Session
      Manager
    Value:
      Ref: BastionHost30F9ED05
Parameters:
  SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amikernel510hvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: "/aws/service/ami-amazon-linux-latest/amzn2-ami-kernel-5.10-hvm-x86_64-gp2"
  BootstrapVersion:
    Type: AWS::SSM::Parameter::Value<String>
    Default: "/cdk-bootstrap/hnb659fds/version"
    Description: Version of the CDK Bootstrap resources in this environment, automatically
      retrieved from SSM Parameter Store. [cdk:skip]
  SourceBucketName:
    Type: String
    Description: A name for the S3 bucket to be created for Database Activity Logs
  SourceBucketPrefix:
    Type: String
    Description: A prefix where the Database Activity Logs will be sent to in the S3 bucket
  SQSQueueName:
    Type: String
    Description: An SQS queue where the Database Activity Logs will be sent to through S3 Notifications. The OpenSearch Ingestion pipeline will pick up messages from this queue and insert records into OpenSearch
  SNSTopicName:
    Type: String
    Description: An SNS topic that will be used to send out notifications from OpenSearch dashboard alerts
Rules:
  CheckBootstrapVersion:
    Assertions:
    - Assert:
        Fn::Not:
        - Fn::Contains:
          - - '1'
            - '2'
            - '3'
            - '4'
            - '5'
          - Ref: BootstrapVersion
      AssertDescription: CDK bootstrap stack version 6 required. Please run 'cdk bootstrap'
        with a recent version of the CDK CLI.
